--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "path":{
-      "@/*":["./scr/*"]
+    "paths":{
+      "@/*":["./src/*"]
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
